Efter lite krångel är dark mode fixat. Knapp för att växla mellan dark och light mode med en roterande transition.

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
 @import "tailwindcss";
 
-a:-webkit-any-link {
-  text-decoration: none;
-  color: white;
-  cursor: pointer;
-}
-
-nav a {text-decoration: none;} 
+@custom-variant dark (&:where(.dark, .dark *));
